Created tha basic html and added some basic styling

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <h1>Coach Doninha</h1>
       <nav>
         <ul>
-          <li>Quem sou eu</li>
-          <li>Meu método</li>
-          <li>Compre o meu curso</li>
+          <li><a href="#">Quem sou eu</a></li>
+          <li><a href="#">Meu método</a></li>
+          <li><a href="#">Compre o meu curso</a></li>
         </ul>
       </nav>
     </header>
@@ -49,6 +49,28 @@
       </div>
     </div>
 
-    <div class="quote-container"></div>
+    <div class="quote-container">
+      <div class="quote">
+        <p>
+          "Apesar do trauma que Coach Doninha causou em mim e toda minha
+          família, hoje eu sou Prata 2 no Valorant. Obrigado Coach Doninha!"
+        </p>
+        <strong><p>-Felipe "Felpudo" Furtado</p></strong>
+      </div>
+    </div>
+
+    <div class="cta-container">
+      <div class="cta-box">
+        <div class="cta-text">
+          <h3>Agora é a hora!</h3>
+          <p>Contrate meus serviçoes hoje e você ganhará</p>
+          <button>Assinar</button>
+        </div>
+      </div>
+    </div>
+
+    <footer>
+      <p>Copyright &copy; Doninha Enterprises 2022</p>
+    </footer>
   </body>
 </html>
