--- a/index.html
+++ b/index.html
@@ -5,29 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coach Doninha</title>
-    <link rel="stylesheet" href="reset.css" />
+    <!-- <link rel="stylesheet" href="reset.css" /> -->
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,700;0,800;0,900;1,400&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
-      <h1>Coach Doninha</h1>
-      <nav>
-        <ul>
-          <li><a href="#">Quem sou eu</a></li>
-          <li><a href="#">Meu método</a></li>
-          <li><a href="#">Compre o meu curso</a></li>
-        </ul>
-      </nav>
+      <div class="header-container">
+        <h1>Coach Doninha</h1>
+        <nav>
+          <ul>
+            <li><a href="#">Quem sou eu</a></li>
+            <li><a href="#">Meu método</a></li>
+            <li><a href="#">Compre o meu curso</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <div class="hero-container">
       <div class="hero-call">
-        <h2>Você nunca conheceu um coach assim</h2>
-        <p>
-          Trabalhe com o melhor coach de CSGO e Valorant do Bacacheri. Apesar
-          dos seus métodos polêmicos, Doninha é com certeza um dos melhores
-          coaches.
-        </p>
+        <div class="hero-call-text">
+          <h2>Você nunca conheceu um coach assim</h2>
+          <p>
+            Trabalhe com o melhor coach de CSGO e Valorant do Bacacheri. Apesar
+            dos seus métodos polêmicos, Doninha é com certeza um dos melhores
+            coaches.
+          </p>
+          <button>Ligue agora</button>
+        </div>
+        <img
+          src="https://source.unsplash.com/SPcFpXIME6M/400x300"
+          alt="uma foto de Coach Doninha"
+        />
       </div>
     </div>
 
