Modified the hero and added a new profile image

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coach Doninha</title>
-    <!-- <link rel="stylesheet" href="reset.css" /> -->
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -39,10 +38,8 @@
           </p>
           <button>Ligue agora</button>
         </div>
-        <img
-          src="https://source.unsplash.com/SPcFpXIME6M/400x300"
-          alt="uma foto de Coach Doninha"
-        />
+
+        <img src="/img/foto-perfil.jpg" alt="foto de coach Doninha" />
       </div>
     </div>
 
