I'm just testing some stuff on the style file. Created a style-2.css for testing

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coach Doninha</title>
-    <link rel="stylesheet" href="style.css" />
+    <!-- <link rel="stylesheet" href="style.css" /> -->
+    <link rel="stylesheet" href="style-2.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,16 +16,14 @@
   </head>
   <body>
     <header>
-      <div class="header-container">
-        <h1>Coach Doninha</h1>
-        <nav>
-          <ul>
-            <li><a href="#">Quem sou eu</a></li>
-            <li><a href="#">Meu método</a></li>
-            <li><a href="#">Compre o meu curso</a></li>
-          </ul>
-        </nav>
-      </div>
+      <h1>Coach Doninha</h1>
+      <nav>
+        <ul>
+          <li><a href="#">Quem sou eu</a></li>
+          <li><a href="#">Meu método</a></li>
+          <li><a href="#">Compre o meu curso</a></li>
+        </ul>
+      </nav>
     </header>
 
     <div class="hero-container">
@@ -38,8 +37,9 @@
           </p>
           <button>Ligue agora</button>
         </div>
-
-        <img src="/img/foto-perfil.jpg" alt="foto de coach Doninha" />
+      </div>
+      <div class="image">
+        <img src="/img/user-image.png" alt="a picture of coach" />
       </div>
     </div>
 
