--- a/index.html
+++ b/index.html
@@ -27,17 +27,16 @@
     </header>
 
     <div class="hero-container">
-      <div class="hero-call">
-        <div class="hero-call-text">
-          <h2>Você nunca conheceu um coach assim</h2>
-          <p>
-            Trabalhe com o melhor coach de CSGO e Valorant do Bacacheri. Apesar
-            dos seus métodos polêmicos, Doninha é com certeza um dos melhores
-            coaches.
-          </p>
-          <button>Ligue agora</button>
-        </div>
+      <div class="hero-text">
+        <h2>Você nunca conheceu um coach assim</h2>
+        <p>
+          Trabalhe com o melhor coach de CSGO e Valorant do Bacacheri. Apesar
+          dos seus métodos polêmicos, Doninha é com certeza um dos melhores
+          coaches.
+        </p>
+        <button>Ligue agora</button>
       </div>
+
       <div class="image">
         <img src="/img/user-image.png" alt="a picture of coach" />
       </div>
