Random information section concluded

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coach Doninha</title>
-    <!-- <link rel="stylesheet" href="style.css" /> -->
     <link rel="stylesheet" href="style-2.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -43,21 +42,25 @@
     </div>
 
     <div class="random-container">
-      <div class="random-items">
-        <img src="" alt="" />
-        <p>Texto descrevendo suas qualidades</p>
-      </div>
-      <div class="random-items">
-        <img src="" alt="" />
-        <p>Texto descrevendo suas qualidades</p>
-      </div>
-      <div class="random-items">
-        <img src="" alt="" />
-        <p>Texto descrevendo suas qualidades</p>
-      </div>
-      <div class="random-items">
-        <img src="" alt="" />
-        <p>Texto descrevendo suas qualidades</p>
+      <h2>Méus métodos</h2>
+
+      <div class="items-container">
+        <div class="item">
+          <div></div>
+          <p>Texto descrevendo suas qualidades</p>
+        </div>
+        <div class="item">
+          <div></div>
+          <p>Texto descrevendo suas qualidades</p>
+        </div>
+        <div class="item">
+          <div></div>
+          <p>Texto descrevendo suas qualidades</p>
+        </div>
+        <div class="item">
+          <div></div>
+          <p>Texto descrevendo suas qualidades</p>
+        </div>
       </div>
     </div>
 
