Created the quote section and deleted the old style file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coach Doninha</title>
-    <link rel="stylesheet" href="style-2.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -67,10 +67,10 @@
     <div class="quote-container">
       <div class="quote">
         <p>
-          "Apesar do trauma que Coach Doninha causou em mim e toda minha
+          "Apesar do trauma que Coach Doninha causou em mim e em toda minha
           família, hoje eu sou Prata 2 no Valorant. Obrigado Coach Doninha!"
         </p>
-        <strong><p>-Felipe "Felpudo" Furtado</p></strong>
+        <p class="quote-name">-Felipe "Felpudo" Furtado</p>
       </div>
     </div>
 
