Created the call to action section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
 
       <div class="image">
-        <img src="/img/user-image.png" alt="a picture of coach" />
+        <img src="img/user-image.png" alt="a picture of coach" />
       </div>
     </div>
 
@@ -79,8 +79,8 @@
         <div class="cta-text">
           <h3>Agora é a hora!</h3>
           <p>Contrate meus serviçoes hoje e você ganhará</p>
-          <button>Assinar</button>
         </div>
+        <button><a href="#">Assinar</a></button>
       </div>
     </div>
 
