Added a picture of Mr Doninha on the hero section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
 
       <div class="image">
-        <img src="img/user-image.png" alt="a picture of coach" />
+        <img src="img/doninha-coach-p1.jpg" alt="a picture of coach Doninha" />
       </div>
     </div>
 
