Corrected a few typos

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <h2>Você nunca conheceu um coach assim</h2>
         <p>
           Trabalhe com o melhor coach de CSGO e Valorant do Bacacheri. Apesar
-          dos seus métodos polêmicos, Doninha é com certeza um dos melhores
-          coaches.
+          dos métodos polêmicos, Doninha é com certeza um dos melhores coaches
+          do Bacacheri.
         </p>
         <button>Ligue agora</button>
       </div>
@@ -78,9 +78,12 @@
       <div class="cta-box">
         <div class="cta-text">
           <h3>Agora é a hora!</h3>
-          <p>Contrate meus serviçoes hoje e você ganhará</p>
+          <p>
+            Contrate meus serviços hoje e você ganhará um lindo
+            <strong> Pano de Prato Gamer</strong>
+          </p>
         </div>
-        <button><a href="#">Assinar</a></button>
+        <button><a href="#">Contratar</a></button>
       </div>
     </div>
 
