Added gap on 'meus métodos' and more corrections on the text

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
         <div class="cta-text">
           <h3>Agora é a hora!</h3>
           <p>
-            Contrate meus serviços hoje e você ganhará um lindo
-            <strong> Pano de Prato Gamer</strong>
+            Contrate meus serviços hoje e você vai ganhar um lindo
+            <strong> Pano de Prato Gamer!</strong>
           </p>
         </div>
         <button><a href="#">Contratar</a></button>
