Removed some files and changed a the hero text

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
         <h2>Você nunca conheceu um coach assim</h2>
         <p>
           Trabalhe com o melhor coach de CSGO e Valorant do Bacacheri. Apesar
-          dos métodos polêmicos, Doninha é com certeza um dos melhores coaches
-          do Bacacheri.
+          dos métodos polêmicos, Doninha é com certeza um coach.
         </p>
         <button>Ligue agora</button>
       </div>
@@ -42,7 +41,7 @@
     </div>
 
     <div class="random-container">
-      <h2>Méus métodos</h2>
+      <h1>Méus métodos</h1>
 
       <div class="items-container">
         <div class="item">
