Changed the title h2 to h1 on the random info

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class="random-container">
-      <h1>Méus métodos</h1>
+      <h1>Quem sou eu</h1>
 
       <div class="items-container">
         <div class="item">
