Just added a anchor to Quem sou eu section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h1>Coach Doninha</h1>
       <nav>
         <ul>
-          <li><a href="#">Quem sou eu</a></li>
+          <li><a href="#quem-sou">Quem sou eu</a></li>
           <li><a href="#">Meu método</a></li>
           <li><a href="#">Compre o meu curso</a></li>
         </ul>
@@ -40,7 +40,7 @@
       </div>
     </div>
 
-    <div class="random-container">
+    <div id="quem-sou" class="random-container">
       <h1>Quem sou eu</h1>
 
       <div class="items-container">
