Added the icons on the 'o que vamos fazer' section and added the descriptions

--- a/index.html
+++ b/index.html
@@ -41,24 +41,38 @@
     </div>
 
     <div id="quem-sou" class="random-container">
-      <h1>Quem sou eu</h1>
+      <h1>O que vamos fazer</h1>
 
       <div class="items-container">
         <div class="item">
-          <div></div>
-          <p>Texto descrevendo suas qualidades</p>
+          <div>
+            <img src="/icons/aim.png" alt="ícone de uma mira" />
+          </div>
+          <p>Melhorar sua mira em todos os jogos possíveis.</p>
         </div>
         <div class="item">
-          <div></div>
-          <p>Texto descrevendo suas qualidades</p>
+          <div>
+            <img src="/icons/sleep.png" alt="ícone de uma lua com z de sono" />
+          </div>
+          <p>
+            Durma só <strong>3 horas por dia</strong>, assim você tem mais tempo
+            para treinar.
+          </p>
         </div>
         <div class="item">
-          <div></div>
-          <p>Texto descrevendo suas qualidades</p>
+          <div>
+            <img src="/icons/dollar.png" alt="ícone de dinheiro" />
+          </div>
+          <p>
+            Vire pro-player em <strong>7 dias</strong> ou uma parte do seu
+            dinheiro de volta
+          </p>
         </div>
         <div class="item">
-          <div></div>
-          <p>Texto descrevendo suas qualidades</p>
+          <div>
+            <img src="/icons/heart.png" alt="ícone de um coração" />
+          </div>
+          <p>Vou dar dicas para você com muita atenção e carinho.</p>
         </div>
       </div>
     </div>
