Changed a few texts in the description and deleted a icon

--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
           <div>
             <img src="/icons/heart.png" alt="ícone de um coração" />
           </div>
-          <p>Vou dar dicas para você com muita atenção e carinho.</p>
+          <p>
+            Trabalho com muito amor e dedicação. Se o cliente não for muito
+            burro.
+          </p>
         </div>
       </div>
     </div>
@@ -83,7 +86,7 @@
           "Apesar do trauma que Coach Doninha causou em mim e em toda minha
           família, hoje eu sou Prata 2 no Valorant. Obrigado Coach Doninha!"
         </p>
-        <p class="quote-name">-Felipe "Felpudo" Furtado</p>
+        <p class="quote-name">Felipe "Felpudo" Furtado</p>
       </div>
     </div>
 
