--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
       <div class="items-container">
         <div class="item">
           <div>
-            <img src="/icons/aim.png" alt="ícone de uma mira" />
+            <img src="icons/aim.png" alt="ícone de uma mira" />
           </div>
           <p>Melhorar sua mira em todos os jogos possíveis.</p>
         </div>
         <div class="item">
           <div>
-            <img src="/icons/sleep.png" alt="ícone de uma lua com z de sono" />
+            <img src="icons/sleep.png" alt="ícone de uma lua com z de sono" />
           </div>
           <p>
             Durma só <strong>3 horas por dia</strong>, assim você tem mais tempo
@@ -61,7 +61,7 @@
         </div>
         <div class="item">
           <div>
-            <img src="/icons/dollar.png" alt="ícone de dinheiro" />
+            <img src="icons/dollar.png" alt="ícone de dinheiro" />
           </div>
           <p>
             Vire pro-player em <strong>7 dias</strong> ou uma parte do seu
@@ -70,7 +70,7 @@
         </div>
         <div class="item">
           <div>
-            <img src="/icons/heart.png" alt="ícone de um coração" />
+            <img src="icons/heart.png" alt="ícone de um coração" />
           </div>
           <p>
             Trabalho com muito amor e dedicação. Se o cliente não for muito
