Felpudo actually is Bronze 2, not Prata 2

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
       <div class="quote">
         <p>
           "Apesar do trauma que Coach Doninha causou em mim e em toda minha
-          família, hoje eu sou Prata 2 no Valorant. Obrigado Coach Doninha!"
+          família. Eu era Ferro 2 hoje eu sou Bronze 2 no Valorant. Obrigado
+          Coach Doninha!"
         </p>
         <p class="quote-name">Felipe "Felpudo" Furtado</p>
       </div>
